# semantic-ctags-diff

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/: README.md
.github/workflows/: README.md  ci.yml
examples/01_added_methods/: README.md  run_example.sh
examples/01_added_methods/new/include/robotics/: RobotController.h
examples/01_added_methods/new/src/: RobotController.cpp
examples/01_added_methods/old/include/robotics/: RobotController.h
semantic_branch_diff/: __init__.py  cli.py  ctags_adapter.py  diff_engine.py  git_utils.py  navigation.py  pydriller_adapter.py  renderers.py  symbols.py
semantic_branch_diff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_ctags_parsing.py  test_diff_engine.py  test_examples.py  test_navigation.py  test_symbol_normalization.py
