[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-branch-diff"
version = "0.1.0"
description = "Semantic branch diffs for C++ using ctags and PyDriller"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydriller>=2.0",
    "python-ctags3>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.8",
]

[project.scripts]
semantic-branch-diff = "semantic_branch_diff.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["semantic_branch_diff*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 140
src = ["semantic_branch_diff", "tests"]
extend-exclude = [
    ".pytest_cache",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors (PEP 8)
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import order)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "RET504",  # unnecessary assignment before return (often clearer)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ARG001",  # pytest fixtures may look unused
]

[tool.ruff.lint.isort]
known-first-party = ["semantic_branch_diff"]
force-single-line = false
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

